site-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: site-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.carlo.ltd"
    - "blog.carlo.ltd"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: site
spec:
  hosts:
  - "www.carlo.ltd"
  - "blog.carlo.ltd"
  gateways:
  - site-gateway
  http:
  - route:
    - destination:
        host: site
        port:
          number: 80
